# fpWorkbench

./: .gitignore  CMakeLists.txt  README.md  epsilon-bad.cpp  fp.cpp  fp.h  hexfloat.c  makefile  specials.c  specials.cpp
src/: epsilon-bad.cpp  fp.cpp  fp.h  hexfloat.cpp  specials.cpp
